--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
           </p>
 
           <div class="cta-row">
-            <a class="btn primary" href="https://wa.me/REEMPLAZA_NUMERO?text=Hola%20quiero%20reservar%20mesa%20para%20%5Bdia%5D%20a%20las%20%5Bhora%5D%2C%20somos%20%5Bn%5D%20personas." target="_blank" rel="noopener">🟢 Reservar mesa</a>
-            <a class="btn" href="https://wa.me/REEMPLAZA_NUMERO?text=Hola%20quiero%20consultar%20disponibilidad%20de%20habitacion%20para%20%5Bfechas%5D%2C%20somos%20%5Bn%5D." target="_blank" rel="noopener">🛏️ Consultar disponibilidad</a>
+            <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🟢 Reservar mesa</a>
+            <a class="btn" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🛏️ Consultar disponibilidad</a>
             <a class="btn" href="carta.html">🍽️ Ver carta</a>
           </div>
 
@@ -118,7 +118,7 @@
             <span>Carta, horarios, ubicación y botón “Reservar mesa”.</span>
           </div>
           <div class="cta-row">
-            <a class="btn primary" href="https://wa.me/REEMPLAZA_NUMERO?text=Hola%20quiero%20reservar%20mesa%20para%20%5Bdia%5D%20a%20las%20%5Bhora%5D%2C%20somos%20%5Bn%5D%20personas." target="_blank" rel="noopener">Reservar</a>
+            <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Reservar</a>
           </div>
         </div>
 
@@ -129,7 +129,7 @@
           </div>
           <div class="cta-row">
             <a class="btn" href="habitaciones.html">Ver habitaciones</a>
-            <a class="btn primary" href="https://wa.me/REEMPLAZA_NUMERO?text=Hola%20quiero%20consultar%20disponibilidad%20de%20habitacion%20para%20%5Bfechas%5D%2C%20somos%20%5Bn%5D." target="_blank" rel="noopener">Consultar</a>
+            <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Consultar</a>
           </div>
         </div>
 
@@ -157,8 +157,8 @@
   <!-- Barra móvil (CTA fijo) -->
   <div class="mobile-bar" role="navigation" aria-label="Acciones rápidas">
     <div class="inner">
-      <a class="btn primary" href="https://wa.me/REEMPLAZA_NUMERO?text=Hola%20quiero%20reservar%20mesa%20para%20%5Bdia%5D%20a%20las%20%5Bhora%5D%2C%20somos%20%5Bn%5D%20personas." target="_blank" rel="noopener">Reservar Mesa Restaurante</a>
-      <a class="btn" href="https://wa.me/REEMPLAZA_NUMERO?text=Hola%20quiero%20consultar%20disponibilidad%20de%20habitacion%20para%20%5Bfechas%5D%2C%20somos%20%5Bn%5D." target="_blank" rel="noopener">Hotel</a>
+      <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Reservar Mesa Restaurante</a>
+      <a class="btn" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Hotel</a>
     </div>
   </div>
 
