--- a/habitaciones.html
+++ b/habitaciones.html
@@ -38,10 +38,10 @@
       <div class="card">
         <h2>Habitación Tehuelche</h2>
         <!-- <img src="assets/hab1.webp" alt="Habitación ..." loading="lazy" decoding="async" /> -->
-        <p class="muted">Capacidad: REEMPLAZA · Baño: REEMPLAZA · Desayuno: Lun-Dom </p>
+        <p class="muted">Capacidad: 2-3 · Baño: REEMPLAZA · Desayuno: Lun-Dom </p>
         <div class="badges">
-          <span class="badge">1 cama king</span>
-          <span class="badge">1 cama de una plaza</span>
+          <span class="badge">1 cama matrimonial</span>
+          <span class="badge">Opción de agregar 1 cama de una plaza</span>
           <span class="badge">Wi-Fi</span>
           <span class="badge">Calefacción eléctrica</span>
           <span class="badge">Estacionamiento</span>
@@ -56,7 +56,8 @@
         <h2>Habitación REEMPLAZA</h2>
         <p class="muted">Capacidad: REEMPLAZA · Baño: REEMPLAZA · Desayuno: REEMPLAZA</p>
         <div class="badges">
-          <span class="badge">1 cama king</span>
+          <span class="badge">1 cama matrimonial</span>
+          <span class="badge">Opción de agregar 1 cama de una plaza</span>
           <span class="badge">Wi-Fi</span>
           <span class="badge">Calefacción eléctrica</span>
           <span class="badge">Estacionamiento</span>
