--- a/habitaciones.html
+++ b/habitaciones.html
@@ -38,7 +38,7 @@
       <div class="card">
         <h2>Habitación Tehuelche</h2>
         <!-- <img src="assets/hab1.webp" alt="Habitación ..." loading="lazy" decoding="async" /> -->
-        <p class="muted">Capacidad: 2-3 · Baño: REEMPLAZA · Desayuno: Lun-Dom </p>
+        <p class="muted">Capacidad: 2-3 · Baño: Privado · Desayuno: Lun-Dom 7:30-10:00</p>
         <div class="badges">
           <span class="badge">1 cama matrimonial</span>
           <span class="badge">Opción de agregar 1 cama de una plaza</span>
@@ -49,12 +49,12 @@
           <span class="badge">Ducha</span>
           <span class="badge">Escritorio de trabajo</span>
         </div>
-        <p class="small" style="margin-top:10px;">Desde <strong>$ REEMPLAZA</strong> por noche</p>
+        <p class="small" style="margin-top:10px;">Desde <strong>$95.000 CLP</strong> por noche</p>
       </div>
 
       <div class="card">
-        <h2>Habitación REEMPLAZA</h2>
-        <p class="muted">Capacidad: REEMPLAZA · Baño: REEMPLAZA · Desayuno: REEMPLAZA</p>
+        <h2>Habitación Yaganes</h2>
+        <p class="muted">Capacidad: 2-3 · Baño: Privado · Desayuno: Lun-Dom 7:30-10:00</p>
         <div class="badges">
           <span class="badge">1 cama matrimonial</span>
           <span class="badge">Opción de agregar 1 cama de una plaza</span>
@@ -65,14 +65,15 @@
           <span class="badge">Ducha</span>
           <span class="badge">Escritorio de trabajo</span>
         </div>
-        <p class="small" style="margin-top:10px;">Desde <strong>$ REEMPLAZA</strong> por noche</p>
+        <p class="small" style="margin-top:10px;">Desde <strong>$95.000 CLP</strong> por noche</p>
       </div>
 
       <div class="card">
-        <h2>Habitación REEMPLAZA</h2>
-        <p class="muted">Capacidad: REEMPLAZA · Baño: REEMPLAZA · Desayuno: REEMPLAZA</p>
+        <h2>Habitación Chonos</h2>
+        <p class="muted">Capacidad: 2-3 · Baño: Privado · Desayuno: Lun-Dom 7:30-10:00</p>
         <div class="badges">
-          <span class="badge">2 camas de una plaza</span>
+          <span class="badge">1 cama matrimonial</span>
+          <span class="badge">Opción de agregar 1 cama de una plaza</span>
           <span class="badge">Wi-Fi</span>
           <span class="badge">Calefacción a leña</span>
           <span class="badge">Estacionamiento</span>
@@ -80,7 +81,7 @@
           <span class="badge">Ducha</span>
           <span class="badge">Escritorio de trabajo</span>
         </div>
-        <p class="small" style="margin-top:10px;">Desde <strong>$ REEMPLAZA</strong> por noche</p>
+        <p class="small" style="margin-top:10px;">Desde <strong>$95.000 CLP</strong> por noche</p>
       </div>
 
       <div class="card">
@@ -93,15 +94,16 @@
           <div class="item">
             <div class="title">Cancelación y cambios</div>
             <div class="desc">
-                Cancelación sin costo con un mínimo de <strong>24 horas</strong> de anticipación.
-                Si viajas vía Chile Chico y la <strong>barcaza Tehuelche</strong> suspende su salida por viento,
-                podemos <strong>mover tu reserva para el día siguiente sin costo</strong> (sujeto a disponibilidad).
+                Cancelación sin costo con un mínimo de <strong>7 días</strong> de anticipación.
+                Cancelación con <strong> menos de 7 días</strong> de anticipación no se devuelve la reserva (50%).
+                Si viajas tomando la <strong>barcaza / ferry</strong> y cierran puerto,
+                podemos <strong>mover su reserva para el día siguiente sin costo</strong> (sujeto a disponibilidad).
             </div>
           <div class="item">
             <div class="title">Niños y mascotas</div>
             <div class="desc">
-                <strong>Niños bienvenidos</strong>; contamos con juegos para ellos.
-                <strong>Mascotas permitidas</strong>, pero deben permanecer <strong>afuera del local</strong> (no pueden ingresar al interior).
+                <strong>Niños +10 años bienvenidos</strong>; contamos con juegos de mesa para ellos.
+                <strong>Mascotas permitidas</strong>, pero deben permanecer <strong>afuera de la Casona</strong> (no pueden ingresar al interior).
             </div>
         </div>
       </div>
@@ -115,7 +117,7 @@
 
   <div class="mobile-bar">
     <div class="inner">
-      <a class="btn primary" href="REEMPLAZA_LINK_WHATSAPP_HOTEL" target="_blank" rel="noopener">Consultar</a>
+      <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Consultar</a>
       <a class="btn" href="contacto.html">Contacto</a>
     </div>
   </div>
