--- a/habitaciones.html
+++ b/habitaciones.html
@@ -5,16 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Habitaciones | Casona Belga</title>
   <meta name="description" content="Habitaciones, tarifas desde, políticas y consulta de disponibilidad por WhatsApp." />
+  <meta name="theme-color" content="#07070a" />
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="assets/logo_casona.png" type="image/svg+xml" />
+  <link rel="icon" href="assets/logo_casona.png" type="image/png" />
 </head>
+
 <body>
   <header>
     <div class="container nav">
-      <div class="brand">
-        <strong><a href="index.html">Casona Belga</a></strong>
-        <span>Hotel · Habitaciones</span>
+      <!-- BRAND con LOGO -->
+      <div class="brand brand-row">
+        <a href="index.html" class="brand-link" aria-label="Casona Belga - Inicio">
+          <img src="assets/logo_casona.png" alt="Logo Casona Belga" class="logo" />
+          <div class="brand-text">
+            <strong>Casona Belga</strong>
+            <span>Hotel · Habitaciones</span>
+          </div>
+        </a>
       </div>
+
       <nav class="menu">
         <a href="carta.html">Carta</a>
         <a href="contacto.html">Contacto</a>
@@ -37,8 +46,8 @@
     <div class="grid">
       <div class="card">
         <h2>Habitación Tehuelche</h2>
-        <!-- <img src="assets/hab1.webp" alt="Habitación ..." loading="lazy" decoding="async" /> -->
-        <p class="muted">Capacidad: 2-3 · Baño: Privado · Desayuno: Lun-Dom 7:30-10:00</p>
+        <!-- <img src="assets/hab1.webp" alt="Habitación Tehuelche" loading="lazy" decoding="async" /> -->
+        <p class="muted">Capacidad: 2–3 · Baño: Privado · Desayuno: Lun–Dom 7:30–10:00</p>
         <div class="badges">
           <span class="badge">1 cama matrimonial</span>
           <span class="badge">Opción de agregar 1 cama de una plaza</span>
@@ -54,7 +63,7 @@
 
       <div class="card">
         <h2>Habitación Yaganes</h2>
-        <p class="muted">Capacidad: 2-3 · Baño: Privado · Desayuno: Lun-Dom 7:30-10:00</p>
+        <p class="muted">Capacidad: 2–3 · Baño: Privado · Desayuno: Lun–Dom 7:30–10:00</p>
         <div class="badges">
           <span class="badge">1 cama matrimonial</span>
           <span class="badge">Opción de agregar 1 cama de una plaza</span>
@@ -70,7 +79,7 @@
 
       <div class="card">
         <h2>Habitación Chonos</h2>
-        <p class="muted">Capacidad: 2-3 · Baño: Privado · Desayuno: Lun-Dom 7:30-10:00</p>
+        <p class="muted">Capacidad: 2–3 · Baño: Privado · Desayuno: Lun–Dom 7:30–10:00</p>
         <div class="badges">
           <span class="badge">1 cama matrimonial</span>
           <span class="badge">Opción de agregar 1 cama de una plaza</span>
@@ -91,20 +100,24 @@
             <div class="title">Check-in / Check-out</div>
             <div class="desc">Check-in desde las <strong>15:00</strong> · Check-out hasta las <strong>11:00</strong>.</div>
           </div>
+
           <div class="item">
             <div class="title">Cancelación y cambios</div>
             <div class="desc">
-                Cancelación sin costo con un mínimo de <strong>7 días</strong> de anticipación.
-                Cancelación con <strong> menos de 7 días</strong> de anticipación no se devuelve la reserva (50%).
-                Si viajas tomando la <strong>barcaza / ferry</strong> y cierran puerto,
-                podemos <strong>mover su reserva para el día siguiente sin costo</strong> (sujeto a disponibilidad).
+              Cancelación sin costo con un mínimo de <strong>7 días</strong> de anticipación.
+              Cancelaciones con <strong>menos de 7 días</strong> no permiten devolución de la reserva (<strong>50%</strong>).
+              Si viajas tomando la <strong>barcaza / ferry</strong> y se cierra puerto por condiciones climáticas,
+              podemos <strong>mover tu reserva para el día siguiente sin costo</strong> (sujeto a disponibilidad).
             </div>
+          </div>
+
           <div class="item">
             <div class="title">Niños y mascotas</div>
             <div class="desc">
-                <strong>Niños +10 años bienvenidos</strong>; contamos con juegos de mesa para ellos.
-                <strong>Mascotas permitidas</strong>, pero deben permanecer <strong>afuera de la Casona</strong> (no pueden ingresar al interior).
+              <strong>Niños +10 años bienvenidos</strong>; contamos con juegos de mesa para ellos.
+              <strong>Mascotas permitidas</strong>, pero deben permanecer <strong>afuera de la Casona</strong> (no pueden ingresar al interior).
             </div>
+          </div>
         </div>
       </div>
     </div>
@@ -117,7 +130,7 @@
 
   <div class="mobile-bar">
     <div class="inner">
-      <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Consultar</a> 
+      <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Consultar</a>
       <a class="btn" href="contacto.html">Contacto</a>
     </div>
   </div>
