style css crema

--- a/habitaciones.html
+++ b/habitaciones.html
@@ -34,7 +34,7 @@
 
   <main class="container section">
     <h2>Habitaciones</h2>
-    <p class="muted">Pon 3–6 opciones máximo para MVP. Agrega 1 foto por tipo (liviano).</p>
+    <p class="muted">Tenemos 3 habitaciones equipadas con cama matrimonial, y la opción de incorporar una cama individual adicional, para una estadía flexible y confortable (capacidad 2–3 personas).</p>
 
     <div class="cta-row">
       <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🛏️ Consultar disponibilidad</a>
