style css policies

--- a/habitaciones.html
+++ b/habitaciones.html
@@ -93,9 +93,9 @@
         <p class="small" style="margin-top:10px;">Desde <strong>$95.000 CLP</strong> por noche</p>
       </div>
 
-      <div class="card">
+      <div class="card full">
         <h2>Políticas</h2>
-        <div class="list">
+        <div class="policies-grid">
           <div class="item">
             <div class="title">Check-in / Check-out</div>
             <div class="desc">Check-in desde las <strong>15:00</strong> · Check-out hasta las <strong>11:00</strong>.</div>
