--- a/carta.html
+++ b/carta.html
@@ -76,7 +76,7 @@
       </div>
 
       <div class="card">
-        <h2>Fondos + acompañamiento</h2>
+        <h2>Fondos + acomp. + salsa</h2>
         <div class="list">
           <div class="item">
             <div class="title">Medallón de Filete o Lomo vetado grillado, 220 grs</div>
