--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   <!-- Barra móvil (CTA fijo) -->
   <div class="mobile-bar" role="navigation" aria-label="Acciones rápidas">
     <div class="inner">
-      <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Reservar Mesa Restaurante</a>
+      <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Reservar Mesa</a>
       <a class="btn" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Hotel</a>
     </div>
   </div>
