--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </section>
 
     <section class="section">
-      <h2>Lo esencial (MVP)</h2>
+      <h2>Lo esencial</h2>
       <div class="grid">
         <div class="card">
           <div class="kv">
@@ -150,12 +150,12 @@
 
         <div class="card">
           <div class="kv">
-            <strong>Confianza</strong>
+            <strong>Ubicación y horarios</strong>
             <span>Dirección, horarios, links a Google/Tripadvisor/Instagram.</span>
           </div>
           <div class="cta-row">
             <a class="btn" href="https://share.google/lNHMBaKp86ndHVqnI" target="_blank" rel="noopener">Google</a>
-            <a class="btn" href="https://www.google.com/search?q=Casona+Belga+Restaurante&stick=H4sIAAAAAAAA_-NgU1I1qEhKSU0xSrJMNjAzNU9LMTC0MqgwNTY3MzJINjBMSk0yTjMwW8Qq4ZxYnJ-XqOCUmpOeqBCUWlySWFqUmFeSCgBK-faQRAAAAA&hl=en-GB&mat=CXHsfK63cUSxElYBTVDHnvItEZ37xy_Tu085bnt8N_u-yvKTZ3660f8Wju99jyIT_V7EnrooKgIHGYeA-sSONmSuAGPZy9AUjWW-dl_0JQckCnWa3a202b-cJ63oOp5Jbw&authuser=0&ved=2ahUKEwjwhOuN592RAxVippUCHen-Fw0Q-MgIegQIEBAf#" target="_blank" rel="noopener">Instagram</a>
+            <a class="btn" href="https://www.instagram.com/casonabelga/?hl=en" target="_blank" rel="noopener">Instagram</a>
           </div>
         </div>
       </div>
