--- a/carta.html
+++ b/carta.html
@@ -29,7 +29,7 @@
       </div>
 
       <nav class="menu">
-        <a href="habitaciones.html">Habitaciones</a>
+        <a href="habitaciones.html">Hotel</a>
         <a href="contacto.html">Contacto</a>
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Reservar</a>
       </nav>
