--- a/contacto.html
+++ b/contacto.html
@@ -28,8 +28,8 @@
       </div>
 
       <nav class="menu">
-        <a href="carta.html">Carta</a>
-        <a href="habitaciones.html">Habitaciones</a>
+        <a href="carta.html">Restaurante</a>
+        <a href="habitaciones.html">Hotel</a>
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">WhatsApp</a>
       </nav>
     </div>
