--- a/habitaciones.html
+++ b/habitaciones.html
@@ -25,12 +25,20 @@
       </div>
 
       <nav class="menu">
-        <a href="carta.html">Carta</a>
+        <a href="carta.html">Restaurante</a>
         <a href="contacto.html">Contacto</a>
+
+        <!-- Idioma (abre traducción al inglés) -->
+        <a class="btn" href="https://translate.google.com/translate?sl=es&tl=en&u=https://www.casonabelga.cl/habitaciones.html"
+           target="_blank" rel="noopener">
+          EN
+        </a>
+
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Consultar</a>
       </nav>
     </div>
   </header>
+
 
   <main class="container section">
     <h2>Habitaciones</h2>
@@ -98,7 +106,7 @@
         <div class="policies-grid">
           <div class="item">
             <div class="title">Check-in / Check-out</div>
-            <div class="desc">Check-in desde las <strong>15:00</strong> · Check-out hasta las <strong>11:00</strong>.</div>
+            <div class="desc">Check-in desde las <strong>15:00</strong> · Check-out hasta las <strong>11:00</strong>. Si almuerza en el restaurante de la Casona Belga, tiene como beneficio un Late Checkout (14:00) SUJETO A DISPONIBILIDAD.</div>
           </div>
 
           <div class="item">
