--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Casona Belga | Hotel & Restaurante</title>
-  <meta name="description" content="Hotel & Restaurante. Reserva directa por WhatsApp. Carta, habitaciones, ubicación y horarios." />
+  <meta name="description" content="Hotel & Restaurante. Reserva directa por WhatsApp. Restaurante, Hotel, Ubicación y Horarios." />
   <link rel="stylesheet" href="style.css" />
 
   <!-- Favicon (PNG) -->
@@ -18,7 +18,7 @@
 
   <!-- Open Graph (para WhatsApp/IG) -->
   <meta property="og:title" content="Casona Belga | Hotel & Restaurante" />
-  <meta property="og:description" content="Reserva directa por WhatsApp. Carta, habitaciones, ubicación y horarios." />
+  <meta property="og:description" content="Reserva directa por WhatsApp. Restaurante, Hotel, Ubicación y Horarios." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.casonabelga.cl/" />
   <meta property="og:image" content="https://www.casonabelga.cl/assets/og.jpg" />
@@ -71,8 +71,8 @@
       </div>
 
       <nav class="menu" aria-label="Navegación">
-        <a href="carta.html">Carta</a>
-        <a href="habitaciones.html">Habitaciones</a>
+        <a href="carta.html">Restaurante</a>
+        <a href="habitaciones.html">Hotel</a>
         <a href="contacto.html">Contacto</a>
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">
           Reservar por WhatsApp
@@ -130,7 +130,7 @@
         <div class="card">
           <div class="kv">
             <strong>Restaurante</strong>
-            <span>Carta, horarios, ubicación y botón “Reservar mesa”.</span>
+            <span>Carta, horarios, ubicación y reservas.</span>
           </div>
           <div class="cta-row">
             <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Reservar</a>
@@ -140,7 +140,7 @@
         <div class="card">
           <div class="kv">
             <strong>Hostelería</strong>
-            <span>Habitaciones, “desde”, políticas, fotos y consulta por WhatsApp.</span>
+            <span>Habitaciones, Precios “desde”, políticas, fotos y consulta por WhatsApp.</span>
           </div>
           <div class="cta-row">
             <a class="btn" href="habitaciones.html">Ver habitaciones</a>
@@ -151,11 +151,13 @@
         <div class="card">
           <div class="kv">
             <strong>Ubicación y horarios</strong>
-            <span>Dirección, horarios, links a Google/Tripadvisor/Instagram.</span>
+            <span>Dirección, horarios, links a Google/Tripadvisor/Instagram/Facebook.</span>
           </div>
           <div class="cta-row">
             <a class="btn" href="https://share.google/lNHMBaKp86ndHVqnI" target="_blank" rel="noopener">Google</a>
+            <a class="btn" href="https://www.tripadvisor.cl/Hotel_Review-g1409465-d23379037-Reviews-Casona_Belga_Hotel_y_Restaurante-Chile_Chico_Aisen_Region.html" target="_blank" rel="noopener">Tripadvisor</a>
             <a class="btn" href="https://www.instagram.com/casonabelga/?hl=en" target="_blank" rel="noopener">Instagram</a>
+            <a class="btn" href="https://www.facebook.com/casonabelga.belga/" target="_blank" rel="noopener">Facebook</a>
           </div>
         </div>
       </div>
@@ -164,7 +166,7 @@
     <section class="footer">
       <hr class="sep" />
       <div class="small">
-        © <span id="y"></span> Casona Belga · Sitio ultra liviano para reservas directas.
+        © <span id="y"></span> Casona Belga · Descansa bien, come mejor.
       </div>
     </section>
   </main>
