--- a/en/contact.html
+++ b/en/contact.html
@@ -1,34 +1,33 @@
 <!doctype html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contacto | Casona Belga</title>
-  <meta name="description" content="Contacto, ubicación, horarios y WhatsApp directo." />
+  <title>Contact | Casona Belga</title>
+  <meta name="description" content="Contact, location, opening hours, and direct WhatsApp." />
   <meta name="theme-color" content="#07070a" />
 
   <link rel="stylesheet" href="style.css" />
 
-  <!-- OJO: tu logo es PNG, así que cámbialo a image/png -->
   <link rel="icon" href="assets/logo_casona.png" type="image/png" />
 </head>
 
 <body>
   <header>
     <div class="container nav">
-      <!-- Brand con logo -->
+      <!-- Brand with logo -->
       <div class="brand brand-row">
-        <a href="index.html" class="brand-link" aria-label="Casona Belga - Inicio">
-          <img src="assets/logo_casona.png" alt="Logo Casona Belga" class="logo" />
+        <a href="index.html" class="brand-link" aria-label="Casona Belga - Home">
+          <img src="assets/logo_casona.png" alt="Casona Belga logo" class="logo" />
           <div class="brand-text">
             <strong>Casona Belga</strong>
-            <span>Contacto</span>
+            <span>Contact</span>
           </div>
         </a>
       </div>
 
       <nav class="menu">
-        <a href="carta.html">Restaurante</a>
+        <a href="carta.html">Restaurant</a>
         <a href="habitaciones.html">Hotel</a>
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">WhatsApp</a>
       </nav>
@@ -36,43 +35,43 @@
   </header>
 
   <main class="container section">
-    <h2>Contacto</h2>
+    <h2>Contact</h2>
 
     <div class="grid">
       <div class="card">
-        <h2>WhatsApp (reservas)</h2>
-        <p class="muted">La forma más rápida.</p>
+        <h2>WhatsApp (reservations)</h2>
+        <p class="muted">The fastest way to reach us.</p>
         <div class="cta-row">
-          <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🟢 Reservar mesa</a>
+          <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🟢 Book a table</a>
           <a class="btn" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🛏️ Hotel</a>
         </div>
         <hr class="sep" />
-        <p class="small">Teléfono: <a href="tel:+56998244016">+56 9 9824 4016</a></p>
+        <p class="small">Phone: <a href="tel:+56998244016">+56 9 9824 4016</a></p>
         <p class="small">Email: <a href="mailto:casonabelga@gmail.com">casonabelga@gmail.com</a></p>
       </div>
 
       <div class="card">
-        <h2>Ubicación</h2>
+        <h2>Location</h2>
         <p class="muted">Bernardo O'Higgins 895, Chile Chico, Aysén · Chile 🇨🇱</p>
         <div class="cta-row">
-          <a class="btn primary" href="https://www.google.com/maps/place/Casona+Belga+Restaurante/data=!4m2!3m1!1s0x0:0x537620c01beb3f06?sa=X&ved=1t:2428&hl=en-GB&ictx=111" target="_blank" rel="noopener">🗺️ Abrir en Google Maps</a>
-          <a class="btn" href="https://share.google/9nMjn10Yoa6bR6Ah8" target="_blank" rel="noopener">⭐ Ver en Google</a>
+          <a class="btn primary" href="https://www.google.com/maps/place/Casona+Belga+Restaurante/data=!4m2!3m1!1s0x0:0x537620c01beb3f06?sa=X&ved=1t:2428&hl=en-GB&ictx=111" target="_blank" rel="noopener">🗺️ Open in Google Maps</a>
+          <a class="btn" href="https://share.google/9nMjn10Yoa6bR6Ah8" target="_blank" rel="noopener">⭐ View on Google</a>
         </div>
         <p class="small" style="margin-top:10px;">
-          Si quieres mapa embebido (más pesado), se puede agregar luego.
+          If you'd like an embedded map (heavier), we can add it later.
         </p>
       </div>
 
       <div class="card">
-        <h2>Horarios</h2>
+        <h2>Opening hours</h2>
         <div class="list">
           <div class="item">
-            <div class="title">Restaurante</div>
-            <div class="desc">Lun–Dom 12:30–22:30</div>
+            <div class="title">Restaurant</div>
+            <div class="desc">Mon–Sun 12:30–22:30</div>
           </div>
           <div class="item">
             <div class="title">Hotel</div>
-            <div class="desc">Lun–Dom 11:00–23:30</div>
+            <div class="desc">Mon–Sun 11:00–23:30</div>
           </div>
         </div>
       </div>
