--- a/contacto.html
+++ b/contacto.html
@@ -11,6 +11,10 @@
 
   <!-- OJO: tu logo es PNG, así que cámbialo a image/png -->
   <link rel="icon" href="assets/logo_casona.png" type="image/png" />
+  <link rel="alternate" hreflang="es" href="https://www.casonabelga.cl/habitaciones.html" />
+  <link rel="alternate" hreflang="en" href="https://www.casonabelga.cl/en/rooms.html" />
+  <link rel="alternate" hreflang="x-default" href="https://www.casonabelga.cl/index.html" />
+
 </head>
 
 <body>
