--- a/en/menu.html
+++ b/en/menu.html
@@ -11,6 +11,9 @@
 
   <!-- Favicon (your file is PNG, not SVG) -->
   <link rel="icon" href="assets/logo_casona.png" type="image/png" />
+  <link rel="alternate" hreflang="en" href="https://www.casonabelga.cl/en/rooms.html" />
+  <link rel="alternate" hreflang="es" href="https://www.casonabelga.cl/habitaciones.html" />
+  <link rel="alternate" hreflang="x-default" href="https://www.casonabelga.cl/index.html" />
 </head>
 
 <body>
