--- a/en/rooms.html
+++ b/en/rooms.html
@@ -8,6 +8,9 @@
   <meta name="theme-color" content="#07070a" />
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="assets/logo_casona.png" type="image/png" />
+  <link rel="alternate" hreflang="en" href="https://www.casonabelga.cl/en/rooms.html" />
+  <link rel="alternate" hreflang="es" href="https://www.casonabelga.cl/habitaciones.html" />
+  <link rel="alternate" hreflang="x-default" href="https://www.casonabelga.cl/index.html" />
 </head>
 
 <body>
