--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
     ]
   }
   </script>
+  <link rel="alternate" hreflang="es" href="https://www.casonabelga.cl/habitaciones.html" />
+  <link rel="alternate" hreflang="en" href="https://www.casonabelga.cl/en/rooms.html" />
+  <link rel="alternate" hreflang="x-default" href="https://www.casonabelga.cl/index.html" />
+
 </head>
 
 <body>
