--- a/habitaciones.html
+++ b/habitaciones.html
@@ -32,11 +32,7 @@
         <a href="carta.html">Restaurante</a>
         <a href="contacto.html">Contacto</a>
 
-        <!-- Idioma (abre traducción al inglés) -->
-        <a class="btn" href="https://translate.google.com/translate?sl=es&tl=en&u=https://www.casonabelga.cl/habitaciones.html"
-           target="_blank" rel="noopener">
-          EN
-        </a>
+        <a class="btn" href="/en/rooms.html">ENGLISH</a>
 
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Consultar</a>
       </nav>
