--- a/en/rooms.html
+++ b/en/rooms.html
@@ -31,11 +31,7 @@
         <a href="carta.html">Restaurant</a>
         <a href="contacto.html">Contact</a>
 
-        <!-- Language (opens translation to English) -->
-        <a class="btn" href="https://translate.google.com/translate?sl=es&tl=en&u=https://www.casonabelga.cl/habitaciones.html"
-           target="_blank" rel="noopener">
-          EN
-        </a>
+        <a class="btn" href="/habitaciones.html">ESPAÑOL</a>
 
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Inquire</a>
       </nav>
