add english III

--- a/en/rooms.html
+++ b/en/rooms.html
@@ -31,7 +31,7 @@
         <a href="carta.html">Restaurant</a>
         <a href="contacto.html">Contact</a>
 
-        <a class="btn" href="/habitaciones.html">ESPAÑOL</a>
+        <a class="btn" href="casona-belga/habitaciones.html">ESPAÑOL</a>
 
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Inquire</a>
       </nav>
