--- a/habitaciones.html
+++ b/habitaciones.html
@@ -32,7 +32,7 @@
         <a href="carta.html">Restaurante</a>
         <a href="contacto.html">Contacto</a>
 
-        <a class="btn" href="/en/rooms.html">ENGLISH</a>
+        <a class="btn" href="casona-belga/en/rooms.html">ENGLISH</a>
 
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Consultar</a>
       </nav>
