--- a/habitaciones.html
+++ b/habitaciones.html
@@ -8,8 +8,8 @@
   <meta name="theme-color" content="#07070a" />
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="assets/logo_casona.png" type="image/png" />
-  <link rel="alternate" hreflang="español" href="https://www.casonabelga.cl/casona-belga/habitaciones.html" />
-  <link rel="alternate" hreflang="english" href="https://www.casonabelga.cl/casona-belga/en/rooms.html" />
+  <link rel="alternate" hreflang="español" href="https://www.casonabelga.cl/habitaciones.html" />
+  <link rel="alternate" hreflang="english" href="https://www.casonabelga.cl/en/rooms.html" />
   <link rel="alternate" hreflang="x-default" href="https://www.casonabelga.cl/index.html" />
 
 </head>
@@ -32,7 +32,7 @@
         <a href="carta.html">Restaurante</a>
         <a href="contacto.html">Contacto</a>
 
-        <a class="btn" href="casona-belga/en/rooms.html">ENGLISH</a>
+        <a class="btn" href="en/rooms.html">ENGLISH</a>
 
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Consultar</a>
       </nav>
